fix: optimize loading visibility logic in BigFileLoading component

--- a/src/app/big-file-loading/big-file-loading.component.scss
+++ b/src/app/big-file-loading/big-file-loading.component.scss
@@ -22,24 +22,26 @@
       border-radius: 50%;
       background-color: #999;
       animation: dotPulse 1.4s ease-in-out infinite both;
-
       &:nth-child(1) {
-        animation-delay: -0.32s;
+        animation-delay: calc(250ms - 0.32s);
       }
 
       &:nth-child(2) {
-        animation-delay: -0.16s;
+        animation-delay: calc(250ms - 0.16s);
       }
 
       &:nth-child(3) {
-        animation-delay: 0s;
+        animation-delay: 250ms;
       }
     }
   }
 }
 
 @keyframes dotPulse {
-  0%,
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
   80%,
   100% {
     transform: scale(0.6);
